--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
 body{
-    color:rgb(33, 106, 106)
+    background-color:rgb(158, 221, 200);
+    color:#216a6a;
+    font-family: "Dancing Script", cursive;
+    margin: 10px;
+}
+
+header{
+    border-bottom: solid 10px rgb(90, 160, 144);
+    padding: 20px;
+    font-size: 40px;
+    color: rgb(73, 73, 119)
+}
+
+h1{
+    font-size:32px;
+}
+
+p{
+    font-size:20px
+}
+
+section{
+    background-color: rgb(245, 246, 170);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    justify-content: center;
 }
