--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
 }
 
 p{
-    font-size:20px
+    font-size:20px;
 }
 
 section{
@@ -25,4 +25,8 @@ section{
     padding-bottom: 80px;
     padding-top: 80px;
     justify-content: center;
+}
+
+.chamada-texto {
+    margin: 30%;
 }
